tests/typing/faulty_function.sy
f :: fn a: int -> int do
    a + 1
end
start :: fn do
    q := f' 1
    q := f' 1.0
    q := 1 -> f'
    q := 1.0 -> f'
end
// error: $Mismatch { got: Type::Float, expected: Type::Int }
// error: $Mismatch { got: Type::Float, expected: Type::Int }
